--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@ html{scroll-behavior:smooth}
 /* .headerWrap{position:fixed;top:0;left:0;z-index:1000;display:flex;justify-content:space-between;align-items:center;padding:20px 60px;width:100%;transition:all .6s cubic-bezier(0.25,0.8,0.25,1);background:transparent;will-change:padding,background,box-shadow;gap:25px} */
 .headerWrap { position: fixed; top: 0; left: 0; z-index: 1000; display: flex; justify-content: space-between; align-items: center; padding: 20px 60px; width: 100%; transition: all .6s cubic-bezier(0.25, 0.8, 0.25, 1); background: linear-gradient( to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0) ); will-change: padding, background, box-shadow; gap: 25px; }
 .headerWrap.scrolled{background:#333;backdrop-filter:blur(8px);padding:10px 40px;box-shadow:0 4px 12px rgba(0,0,0,0.3)}
-.headerLogoSec{display: flex;align-items: center;justify-content: center;}
+.headerLogoSec{display: flex;align-items: flex-end;justify-content: center;}
 .headerLogoSec>a{cursor:default}
 .headerLogoSec .firstLogoLink{border-right: 1px solid #7B7B7B; padding-right: 20px; margin-right: 20px;cursor: pointer;max-width: 180px;}
 .headerLogoSec .secondLogoLink > img{max-width: 100px;}
