--- a/public/styles/mainbreaks.css
+++ b/public/styles/mainbreaks.css
@@ -11,6 +11,10 @@
     .videoPopupContent{max-width:1200px}
     
     .associateSlide .associateDesc{font-size:22px;}
+
+    .specialityCard{gap:30px;}
+    .specialityContent{padding:30px 60px 30px 0;}
+    .specialityContent h4{font-size:26}
 }
 
 @media screen and (min-width: 1440px) {
@@ -150,10 +154,10 @@
     .ourSpecialitiesSliderNav{gap:10px;top:-80px}
     .specialitySlide{padding:20px}
     .specialitySlideTitle{font-size:24px;margin-top:20px}
-    .specialityContent h4{font-size:18px;padding-bottom: 3px;}
+    .specialityContent h4{font-size:20px;padding-bottom: 2px;}
     .specialityImageWrap{flex:0 0 150px}
     .specialityContent{padding: 15px 10px 15px 0;}
-    .specialityContent p{font-size: 14px;}
+    .specialityContent p{font-size: 15px;}
     .specialityCard{gap:10px}
     .ourSpecialitiesMarquee{padding:30px 20px 0}
     .ourSpecialitiesMarquee .marqueeText{font-size:45px}
@@ -212,6 +216,13 @@
         .eventInfo>h3{font-size:20px}
         .eventInfo>p{padding-top:0}
         .eventItem{gap:25px}
+
+        .specialityCard{flex-direction: column;gap: 15px;padding: 15px;align-items: center;}
+        .specialityImageWrap{flex: auto;width: 100px;height: 100px;}
+        .specialityContent{padding: 0;align-items: center;}
+        .specialityItems{gap: 15px;}
+        .specialityContent{text-align: center;}
+
 }
 
 @media only screen and (max-width: 320px) {
