home page changes

--- a/public/styles/mainbreaks.css
+++ b/public/styles/mainbreaks.css
@@ -134,11 +134,10 @@
         
     .areaOfApplicationsWrap{padding:60px 0 210px}
     .areaOfApplicationsHead{padding-bottom:40px;flex-direction: column;justify-content: flex-start;align-items: flex-start;gap: 25px;}
-    .areaOfApplicationsSliderNav{bottom:-60px}
+    .areaOfApplicationsSliderNav{bottom:-60px;gap:5px}
     .slideTitle>img{max-width:55px}
     .areaOfApplicationsSlider .slideSec{gap:20px}
-    .areaOfApplicationsSliderBtn{width:32px;height:32px}
-    .areaOfApplicationsSliderNav{gap:10px}
+    .areaOfApplicationsSliderBtn{width:38px;height:38px}    
 
     .atGlanceWrap{padding:60px 0 150px}
     .atGlanceTopContLft>p{font-size:18px;margin-top:25px}
@@ -147,11 +146,12 @@
     .atGlanceGrid{gap:45px 30px;grid-template-columns:repeat(2,1fr)}
     .atGlanceMarquee{padding:30px 20px 0}
     .atGlanceMarquee .marqueeText{font-size:45px}
+    .atGlanceGridItem > img { width: 80px; height: 80px; }
         
         
     .ourSpecialitiesWrap{padding:60px 0 150px}
-    .ourSpecialitiesSliderBtn{width:32px;height:32px}
-    .ourSpecialitiesSliderNav{gap:10px;top:-80px}
+    .ourSpecialitiesSliderBtn{width:38px;height:38px}
+    .ourSpecialitiesSliderNav{gap:5px;top:-80px}
     .specialitySlide{padding:20px}
     .specialitySlideTitle{font-size:24px;margin-top:20px}
     .specialityContent h4{font-size:20px;padding-bottom: 2px;}
@@ -163,27 +163,28 @@
     .ourSpecialitiesMarquee .marqueeText{font-size:45px}
         
     .ourAssociatesWrap{padding:60px 0 230px}
-    .ourAssociatesSliderNavBtn{width:32px;height:32px}
-    .ourAssociatesSliderNav{gap:10px;bottom:-80px}
+    .ourAssociatesSliderNavBtn{width:38px;height:38px}
+    .ourAssociatesSliderNav{gap:5px;bottom:-80px}
     .associateImg{max-width:150px}
     .associateSlide .associateDesc{font-size:18px}
         
     .ourCertificationWrap{padding:40px 0 230px}
     .ourCertificationHead{padding-bottom:30px}
-    .ourCertificationNav{gap:10px;bottom:-70px}
-    .ourCertificationSlierNavBtn{width:32px;height:32px}
+    .ourCertificationNav{gap:5px;bottom:-70px}
+    .ourCertificationSlierNavBtn{width:38px;height:38px}
     .certificationImg{max-width:150px}
         
     .ourProductsWrap{padding:60px 0 0}
-    .ourProductsSlierNavBtn{width:32px;height:32px}
-    .ourProductsSliderNav{top:40px;right:25px;gap:10px}
-    .productName{margin:5px 0 10px;font-size:28px}
+    .ourProductsSlierNavBtn{width:38px;height:38px}
+    .ourProductsSliderNav{top:40px;right:25px;gap:5px}
+    .productName{margin:5px 0 10px;font-size:24px}
     .productContent{top:40px;left:20px}
     .productContent>a{font-size:16px}
+    .productBg{height: 80vh;}
         
     .tesimonialsWrap{padding:60px 0 160px}
-    .testimonialsSlierNavBtn{width:32px;height:32px}
-    .testimonialsSliderNav{gap:10px;top:-30px}
+    .testimonialsSlierNavBtn{width:38px;height:38px}
+    .testimonialsSliderNav{gap:5px;top:-30px}
     .testimonialItem{padding:30px 25px}
         
     .insightsUpdatesWrap{padding:60px 0 180px}
@@ -193,8 +194,7 @@
     .insightsUpdateGridItem p{color:#111;margin:15px 0 20px;font-size:16px}
         
     .eventsWrap{padding:60px 0}
-    .eventsBodyLft{justify-content:center}
-    /* .eventSliderWrap{max-width:100%} */
+    .eventsBodyLft{justify-content:center}    
     .eventItem{flex-direction:column}
     .eventInfo>h3,.eventInfo>p{text-align:center}
     .eventInfo>span{justify-content:center}
@@ -203,15 +203,20 @@
     .eventsSliderNav{position:static;transform: none;justify-content: center;align-items: center;}
     .eventSliderWrap{width: 100%;}
 
+    .viewOurProfileWrap{height: 80vh;}
+
 }
 
  @media only screen and (max-width: 479px) {
         .homeCmnHead{font-size:24px}
         .bannerContentLft>h1{padding-bottom:15px;font-size:38px}
         .bannerGrid{grid-template-columns:repeat(1,1fr);gap:12px}
+        
         .atGlanceTopContRght>span{font-size:250px}
         .atGlanceTopContRght>em{max-width:160px;bottom:35px}
         .atGlanceGrid{grid-template-columns:repeat(1,1fr);gap:25px}
+        .atGlanceGridItem > img { width: 75px; height: 75px; }
+        
         .eventsBody{gap:30px}
         .eventInfo>h3{font-size:20px}
         .eventInfo>p{padding-top:0}
@@ -222,6 +227,10 @@
         .specialityContent{padding: 0;align-items: center;}
         .specialityItems{gap: 15px;}
         .specialityContent{text-align: center;}
+
+        .insightsUpdateHead{flex-direction: column;gap: 20px;}
+        .insightsUpdateHead .exploreMoreBtn{max-width: fit-content;}
+        .insightsUpdateGrid{grid-template-columns: repeat(1, 1fr);}
 
 }
 
