--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -20,11 +20,11 @@ input[type=number] {-moz-appearance: textfield;}
 
 .login-wrapper{height: 100%;background-color: #f0f2f5; font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
 .split-container {display: flex; height: 100vh; box-sizing: border-box;}
-.left-panel {flex: 1;display: none; background-image: url('../images/admin/loginbg.jpg'); background-size: cover;background-position: center;position: relative;background-color: #000115;}
+.left-panel {flex:1;display: block; background-image: url('../images/admin/loginbg.jpg'); background-size: cover;background-position: center;position: relative;background-color: #000115;}
 .left-panel-content {position: absolute;bottom: 40px;left: 40px;color: white;text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);padding: 20px;}
-.left-panel-content h2 {font-size: 2.5rem;margin-bottom: 5px;font-weight: 800;}
+.left-panel-content h2 {font-size: 1.5rem;margin-bottom: 5px;font-weight: 800;}
 .left-panel-content p {font-size: 1.1rem;opacity: 0.9;}
-.right-panel {flex: 1;display: flex;justify-content: center;align-items: center;background-color: #ffffff;overflow-y: auto;}
+.right-panel {flex:  0 0 450px;display: flex;justify-content: center;align-items: center;background-color: #ffffff;overflow-y: auto;}
 
 .login-container {width: 100%;max-width: 400px;padding: 40px 30px;box-sizing: border-box;text-align: center;}
 
@@ -74,24 +74,41 @@ input[type=number] {-moz-appearance: textfield;}
 .welcomeMessage .card{padding: 30px;}
 .welcomeMessage .card p{font-size: 16px;line-height: 26px;margin:0;}
 
-@media (max-width: 768px) {
+
+
+
+@media screen and (min-width: 1600px) {
+    .right-panel {flex: 0 0 650px;}
+    .login-container{max-width: 500px;}
+}
+
+@media screen and (min-width: 1440px) {
+
+}
+
+@media only screen and (min-width : 1200px) {
+    .left-panel-content h2 {font-size: 2.5rem;}
+}
+
+@media only screen and (max-width: 991px) {
+
+}
+@media only screen and (max-width: 767px) {
+
+    .left-panel {display: none;}
+    .right-panel {flex: 1;}
     .main-content.pushed { margin-left: 200px; } 
+
+    .sidebar.open {width: 200px;}
     .header-left h1 {font-size: 1.2em;}
-}
 
- 
-@media (max-width: 500px) {
-    .login-panel {margin: 20px;padding: 30px;}
 }
-
-@media (min-width: 768px) {
+@media only screen and (max-width: 479px) {
     
-    .left-panel {display: block;}
-    .right-panel {flex: 0 0 500px;}
-    .left-panel { flex: 1;}
 }
-        
+  
 
-@media (min-width: 1200px) {
-    .right-panel {flex: 0 0 450px;}
-}
+    
+
+
+
